<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.DetailViewActivity">
    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint = "Name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:imeOptions="actionDone"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/bussnumber"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="bussnumber"
        android:inputType="number"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:imeOptions="actionDone"
        android:singleLine="true"/>
        <Spinner
    android:id="@+id/primbus"
    android:layout_width="359dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:layout_constraintTop_toBottomOf="@+id/bussnumber"
    android:layout_marginLeft="8dp"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginStart="8dp"
    android:entries="@array/primaryBusiness"
    android:textAlignment="center"/>
    <EditText
        android:id="@+id/addr"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="addr"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/primbus"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:imeOptions="actionDone"
        android:singleLine="true"/>
    <EditText
        android:id="@+id/proTerr"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="proTerr"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/addr"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:imeOptions="actionDone"
        android:singleLine="true"/>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Update Data"
        app:layout_constraintTop_toBottomOf="@+id/proTerr"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:onClick="updateContact"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="eraseContact"
        android:text="Erase BusinessData"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proTerr" />


</android.support.constraint.ConstraintLayout>
